# spectangle

./: .gitignore  README.md  environment-cuda.yml  environment.yml  pyproject.toml
configs/models/: pinn.yaml  unet.yaml  vit.yaml
configs/simulations/: complex_euclid.yaml  simple_mini.yaml
notebooks/euclid_like_version/simulations/: 01_generate_euclid_like_dataset.ipynb  02_psf_and_sources.ipynb  03_dispersion_traces.ipynb
notebooks/euclid_like_version/training_testing/: 01_train_pinn_on_euclid_like.ipynb  02_train_unet_on_euclid_like.ipynb  03_train_vit_on_euclid_like.ipynb
notebooks/miniature_version/simulations/: 01_generate_mini_dataset.ipynb  02_psf_and_sources.ipynb  03_dispersion_traces.ipynb
notebooks/miniature_version/training_testing/: 01_train_unet_on_mini.ipynb  02_train_vit_on_mini.ipynb  03_train_pinn_on_mini.ipynb
scripts/: run_simulation.py  train.py
spectangle/: __init__.py  paths.py
spectangle/data_loaders/: __init__.py  dataset.py
spectangle/models/: __init__.py  losses.py  pinn.py  unet.py  vit.py
spectangle/physics/: __init__.py  dispersion.py  grism.py  psf.py
spectangle/simulations/: __init__.py  complex.py  forward.py  io.py  sed.py  simple.py  sources.py
spectangle/utils/: __init__.py  metrics.py  training.py  visualization.py
